Fix: Hiding scrollbar

--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -10,7 +10,7 @@ body {
   white-space: nowrap;
 }
 
-html:-webkit-scrollbar,
-body:-webkit-scrollbar {
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
   display: none;
 }
